# people-detector

./: .gitignore  CMakeLists.txt  README.md  common.hpp  main.cpp
contour/: ContourDetecter.cpp  ContourDetecter.h
dnn/: DnnPeopleDetector.cpp  DnnPeopleDetector.h
